toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__array_destructuring_with_default_values-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [y = 200, z = 300] = [22];\n"
---
internal_call_graph: {}
cell_exposed_values:
  y: {}
  z: {}
cell_depended_values: {}
triggerable_functions: {}
