toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__array_destructuring_with_gaps-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [i, , j] = [7, 8, 9];\n"
---
internal_call_graph: {}
cell_exposed_values:
  i: {}
  j: {}
cell_depended_values: {}
triggerable_functions: {}
