toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__array_destructuring_with_gaps.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [i, , j] = [7, 8, 9];\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: i
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: j
      in_scope: false
      exposed: true
- - AssignmentFromStatement
