toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__array_destructuring_with_rest-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [k, ...rest] = [10, 11, 12];\n"
---
internal_call_graph: {}
cell_exposed_values:
  k: {}
  rest: {}
cell_depended_values: {}
triggerable_functions: {}
