toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__array_destructuring_with_rest.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [k, ...rest] = [10, 11, 12];\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: k
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: rest
      in_scope: false
      exposed: true
- - AssignmentFromStatement
