toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__basic_array_destructuring-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [g, h] = [5, 6];\n"
---
internal_call_graph: {}
cell_exposed_values:
  g: {}
  h: {}
cell_depended_values: {}
triggerable_functions: {}
