toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__basic_array_destructuring.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [g, h] = [5, 6];\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: g
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: h
      in_scope: false
      exposed: true
- - AssignmentFromStatement
