toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__basic_object_destructuring-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { a, b } = { a: 1, b: 2 };\n"
---
internal_call_graph: {}
cell_exposed_values:
  a: {}
  b: {}
cell_depended_values: {}
triggerable_functions: {}
