toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__complex_nested_destructuring-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { q: { r: [s, { t }] } } = { q: { r: [17, { t: 18 }] } };\n"
---
internal_call_graph: {}
cell_exposed_values:
  s: {}
  t: {}
cell_depended_values: {}
triggerable_functions: {}
