toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__destructuring_in_for_of_loops-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const items = [{ id: 1, name: 'Item 1' }, { id: 2, name: 'Item 2' }];\nfor (const { id, name } of items) {\n    console.log(`${id}: ${name}`);\n}\n"
---
internal_call_graph: {}
cell_exposed_values:
  items: {}
cell_depended_values: {}
triggerable_functions: {}
