toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__destructuring_in_function_parameters-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function printPerson({ name, age = 30 }) {\n    console.log(`${name} is ${age} years old`);\n}\n"
---
internal_call_graph: {}
cell_exposed_values: {}
cell_depended_values: {}
triggerable_functions:
  printPerson:
    arguments:
      - name
      - age
    emit_event: []
    trigger_on: []
